# ProyectoII_ProyectoIIF

./: CMakeLists.txt  Canal.cpp  Canal.h  JsonManager.cpp  JsonManager.h  Librerias.h  ListaEnlazada.h  Nodo.h  README.md  SistemaTuTubo.cpp  SistemaTuTubo.h  Usuario.cpp  Usuario.h  Video.h  VideoMPG.cpp  VideoMPG.h  Videomp4.cpp  Videomp4.h  main.cpp
Adaptor/: AdapterMPG.cpp  AdapterMPG.h
Excepciones/: ArchivoExcepcion.h  LoginExcepcion.h  ReproduccionExcepcion.h  SuscripcionException.h  TuTuboExcepcion.h  UsuarioYaExisteExcepcion.h
Iterador/: IColeccion.h  IIterador.h  IteradorLista.h
Observer/: IObservable.h  IObserver.h
